--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
  *.js linguist-detectable=false
  *.html linguist-detectable=true
  *.xml linguist-detectable=false
+ *.text linguist-detectable=false
