--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
- *.css linguist-detectable=false
+ *.css linguist-vendored=true
  *.js linguist-detectable=false
- *.html linguist-detectable=true
+ *.html linguist-detectable=false
  *.xml linguist-detectable=false
 
