--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
- *.css linguist-vendored=true
+ *.css linguist-detectable=true
  *.js linguist-detectable=false
  *.html linguist-detectable=false
  *.xml linguist-detectable=false
